--- a/detail.html
+++ b/detail.html
@@ -7,17 +7,38 @@
 </head>
 <body>
     <div>
-    <div>
         <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
+        <a href="">Login</a>
+    </div>
+    <div>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         <br>
-        <label>Header Div</label>
+        <a href="/payment.html">Book Now</a>
+        <h2>Radison Blu Hotel</h2>
+        <p>RATING</p>
+        <p>5 Star</p>
+        <p>AMENITIES</p>
+        <ul>
+            <li>Room Service</li>
+            <li>Resturant</li>
+            <li>Business center</li>
+            <li>Fitness center</li>
+            <li>Pool</li>
+        </ul>
+        <h5>DESCRIPTION</h5>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
     </div>
     <div>
-        Content Div
+        <div>
+            <a href="" target="_blank">CONTACT US</a>
+        </div>
+
+        <div>
+            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt="" height="20px" width="20px" ></a>
+            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt="" height="20px" width="20px"></a>
+            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt="" height="20px" width="20px"></a>
+        </div>
+        &copy 2020 ROOM SEARCH PVT. LTD.
     </div>
-    <div>
-        Footer Div
-    </div>
-</div>
 </body>
 </html>
