--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
     <div>
     <div>
         <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
+        <a href="login.html" target="_blank">Login</a>
+    </div>
+    <div>
+        Search Bar
         <br>
-        <label>Header Div</label>
+        <a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="" height="300px" width="300px"> </a>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="" height="300px" width="300px">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="" height="300px" width="300px">
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="" height="300px" width="300px">
+        <br>
+        <a href="#">View more >></a>
+    </div>
     </div>
     <div>
-        Content Div
-    </div>
-    <div>
-        Footer Div
+        <a href="contact.html" target="_blank">CONTACT US</a>
+        <br>
+        <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" height="20px" width="22px" ></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt="" height="20px" width="22px"></a>
+        <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt="" height="20px" width="22px"></a>
+        <br>
+        &copy 2020 ROOM SEARCH PVT. LTD. 
     </div>
 </div>
 </body>
