--- a/list.html
+++ b/list.html
@@ -9,14 +9,49 @@
     <div>
     <div>
         <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
+        <a href="login.html" target="_blank">Login</a>
+    </div>
+    <div>
+        <ul>
+            <li><a href="#" target="_self">List View</a></li>
+            <li><a href="#" target="_self">Map View</Map></a></li>
+        </ul>
+        <div>
+        <a href="/detail.html" target=""><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt=""></a>
         <br>
-        <label>Header Div</label>
+        <h3><a href="">Radison Blu Hotel</a></h3>
+        <p><a href="">5 Star</a></p>
+        <p><a href="">New Delhi</a></p>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
+        </div>
+        <br>
+        <div>
+        <a href="">The Lalit New Delh</a>
+        <br>
+        <p>4.5 Star</p>
+        <p>New Delhi</p>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
+        </div>
+        <br>
+        <div>
+        <a href="">Taj Palace</a>
+        <br>
+        <p>4.0 Star</p>
+        <p>New Delhi</p>
+        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
+        </div>
+        <br>
+        MAP VIEW
     </div>
+    <br>
     <div>
-        Content Div
-    </div>
-    <div>
-        Footer Div
+        <a href="contact.html" target="_blank">CONTACT US</a>
+        <br>
+        <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" height="20px" width="22px" ></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt="" height="20px" width="22px"></a>
+        <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt="" height="20px" width="22px"></a>
+        <br>
+        &copy 2020 ROOM SEARCH PVT. LTD.
     </div>
 </div>
 </body>
