--- a/payment.html
+++ b/payment.html
@@ -7,17 +7,38 @@
 </head>
 <body>
     <div>
-    <div>
         <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
-        <br>
-        <label>Header Div</label>
+        <a href="">Login</a>
     </div>
     <div>
-        Content Div
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <h2>Radison Blu Hotel</h2>
+        <div>
+            <p>#38 of 1,289 hotels in New Delhi</p>
+            <p>National Highway 8, New Delhi 110017 India</p>
+        </div>
+        <div>
+            <p><label style="font-weight: bold;">Name:</label> <label>John Doe</label></p>
+            <p><label style="font-weight: bold;">Number of Adults:</label> <label>2</label></p>
+            <p><label style="font-weight: bold;">Check-in Date:</label> <label>06.06.2020</label></p>
+            <p><label style="font-weight: bold;">Check-out Date:</label> <label>08.06.2020</label></p>
+        </div>
+        <div>
+            <p><label style="font-weight: bold;">Tariff Breakdown:</label> <label>Rs 1000 * 2 Adults * 5 Nights</label></p>
+            <p><label style="font-weight: bold;">Total Amount:</label> <label>Rs 10000</label></p>
+        </div>
+        <a href="#">Pay Now</a>
     </div>
     <div>
-        Footer Div
+        <div>
+            <a href="" target="_blank">Contact Us</a>
+        </div>
+        <div>
+            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt="" height="20px" width="20px" ></a>
+            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt="" height="20px" width="20px"></a>
+            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt="" height="20px" width="20px"></a>
+        </div>
+        &copy 2020 ROOM SEARCH PVT. LTD.
     </div>
-</div>
 </body>
 </html>
