--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="login.html" target="_blank">Login</a>
     </div>
     <div>
-        Search Bar
+        <input type="text" placeholder="City">
         <br>
         <a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="" height="300px" width="300px"> </a>
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="" height="300px" width="300px">
