--- a/payment.html
+++ b/payment.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div>
-        <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
-        <a href="">Login</a>
+        <a href="index.html"><img src="/assests/images/logo.png" alt="logo" height="100px" width="150px"></a>
+        <a href="login.html">Login</a>
     </div>
     <div>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
@@ -31,7 +31,7 @@
     </div>
     <div>
         <div>
-            <a href="" target="_blank">Contact Us</a>
+            <a href="contact.html" target="_blank">Contact Us</a>
         </div>
         <div>
             <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt="" height="20px" width="20px" ></a>
