--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <div>
-        CONTACT US
+        <form action="index.html">
+        <p>Thank you for reaching out!!!</p>
+        <p>Please enter your email and we will get back to you</p>
+        <label for="username"></label>
+        <input type="username" id="username" name="username" placeholder="Enter your email" required>
+        <br>
+        <input type="submit">
+        </form>
     </div>
 </body>
 </html>
