--- a/detail.html
+++ b/detail.html
@@ -7,13 +7,30 @@
 </head>
 <body>
     <div>
-        <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
-        <a href="">Login</a>
+        <a href="index.html"><img src="/assests/images/logo.png" alt="logo" height="100px" width="150px"></a>
+        <a href="login.html">Login</a>
     </div>
     <div>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         <br>
-        <a href="/payment.html">Book Now</a>
+        <form action="payment.html">
+            <label for="adults">Adults:</label>
+            <input type="number" id="adults" name="adults" min="1" required>
+            <br>
+            <label for="Name">Name:</label>
+            <input type="text" id="Name" name="Name" required>
+            <br>
+            <label for="from date">From Date:</label>
+            <input type="date" id="from date" name="from date" required>
+            <br>
+            <label for="To date">To Date:</label>
+            <input type="date" id="To date" name="To date" required>
+            <br>
+            <label for="price">Total:</label>
+            <input type="text" id="price" name="price" disabled>
+            <br>
+            <input type="submit" value="Book Now">
+        </form>
         <h2>Radison Blu Hotel</h2>
         <p>RATING</p>
         <p>5 Star</p>
@@ -30,7 +47,7 @@
     </div>
     <div>
         <div>
-            <a href="" target="_blank">CONTACT US</a>
+            <a href="contact.html" target="_blank">CONTACT US</a>
         </div>
 
         <div>
