--- a/login.html
+++ b/login.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <div>
-        LOGIN
+        <form action="index.html">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="password" placeholder="Enter Username" required>
+        <br>
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password" placeholder="Enter Password" required>
+        <br>
+        <input type="submit" value="Login">
+        </form>
     </div>
 </body>
 </html>
