--- a/detail.html
+++ b/detail.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/detail.css">
 </head>
 <body>
-    <div>
-        <a href="index.html"><img src="/assests/images/logo.png" alt="logo" height="100px" width="150px"></a>
+    <header>
+        <a href="index.html"><img src="/assests/images/logo.png"></a>
         <a href="login.html">Login</a>
-    </div>
-    <div>
+    </header>
+    <article>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
-        <br>
-        <form action="payment.html">
-            <label for="adults">Adults:</label>
-            <input type="number" id="adults" name="adults" min="1" required>
-            <br>
-            <label for="Name">Name:</label>
-            <input type="text" id="Name" name="Name" required>
-            <br>
-            <label for="from date">From Date:</label>
-            <input type="date" id="from date" name="from date" required>
-            <br>
-            <label for="To date">To Date:</label>
-            <input type="date" id="To date" name="To date" required>
-            <br>
-            <label for="price">Total:</label>
-            <input type="text" id="price" name="price" disabled>
-            <br>
-            <input type="submit" value="Book Now">
-        </form>
+            <form action="payment.html">
+                <label for="adults">Adults:</label>
+                <input type="number" id="adults" name="adults" min="1" required>
+                <br>
+                <label for="Name">Name:</label>
+                <input type="text" id="Name" name="Name" required>
+                <br>
+                <label for="from date">From Date:</label>
+                <input type="date" id="from date" name="from date" required>
+                <br>
+                <label for="To date">To Date:</label>
+                <input type="date" id="To date" name="To date" required>
+                <br>
+                <label for="price">Total:</label>
+                <input type="text" id="price" name="price" disabled>
+                <br>
+                <input type="submit" value="Book Now">
+            </form>
         <h2>Radison Blu Hotel</h2>
         <p>RATING</p>
         <p>5 Star</p>
@@ -44,18 +44,18 @@
         </ul>
         <h5>DESCRIPTION</h5>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
-    </div>
-    <div>
+    </article>
+    <footer>
         <div>
             <a href="contact.html" target="_blank">CONTACT US</a>
         </div>
 
-        <div>
-            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt="" height="20px" width="20px" ></a>
-            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt="" height="20px" width="20px"></a>
-            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt="" height="20px" width="20px"></a>
-        </div>
+            <div id="logo">
+                <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt=""></a>
+                <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt=""></a>
+                <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt=""></a>
+            </div>
         &copy 2020 ROOM SEARCH PVT. LTD.
-    </div>
+    </footer>
 </body>
 </html>
