--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOTEL_BOOKING_WEBSIDE</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <div>
-    <div>
-        <img src="/assests/images/logo.png" alt="logo" height="100px" width="150px">
+    <header>
+        <img src="/assests/images/logo.png" alt="logo">
         <a href="login.html" target="_blank">Login</a>
-    </div>
-    <div>
+    </header>
+    <article>
         <input type="text" placeholder="City">
         <br>
         <a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="" height="300px" width="300px"> </a>
@@ -20,17 +20,15 @@
         <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="" height="300px" width="300px">
         <br>
         <a href="#">View more >></a>
-    </div>
-    </div>
-    <div>
+    </article>
+    <footer>
         <a href="contact.html" target="_blank">CONTACT US</a>
         <br>
-        <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" height="20px" width="22px" ></a>
-        <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt="" height="20px" width="22px"></a>
-        <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt="" height="20px" width="22px"></a>
+        <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
+        <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
         <br>
         &copy 2020 ROOM SEARCH PVT. LTD. 
-    </div>
-</div>
+    </footer>
 </body>
 </html>
