--- a/payment.html
+++ b/payment.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOTEL_BOOKING_WEBSIDE_Payment</title>
+    <link rel="stylesheet" href="styles/payment.css">
 </head>
 <body>
-    <div>
-        <a href="index.html"><img src="/assests/images/logo.png" alt="logo" height="100px" width="150px"></a>
+    <header>
+        <a href="index.html"><img src="/assests/images/logo.png" alt="logo"></a>
         <a href="login.html">Login</a>
-    </div>
-    <div>
+    </header>
+    <div id="content">
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         <h2>Radison Blu Hotel</h2>
         <div>
@@ -29,16 +30,16 @@
         </div>
         <a href="#">Pay Now</a>
     </div>
-    <div>
+    <footer>
         <div>
             <a href="contact.html" target="_blank">Contact Us</a>
         </div>
         <div>
-            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt="" height="20px" width="20px" ></a>
-            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt="" height="20px" width="20px"></a>
-            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt="" height="20px" width="20px"></a>
+            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt=""></a>
+            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt=""></a>
         </div>
         &copy 2020 ROOM SEARCH PVT. LTD.
-    </div>
+    </footer>
 </body>
 </html>
