--- a/list.html
+++ b/list.html
@@ -19,29 +19,29 @@
             </ul>
         </div>
         <div id="content">
-            <div>
-                <a href="/detail.html" target=""><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt=""></a>
-                <h3><a href="">Radison Blu Hotel</a></h3>
-                <p><a href="">5 Star</a></p>
-                <p><a href="">New Delhi</a></p>
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="">
-            </div> 
-            <div>
-                <a href="">The Lalit New Delh</a>
-                <p>4.5 Star</p>
-                <p>New Delhi</p>
-                <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="">
-            </div>
+                <div id="img1">
+                    <a href="/detail.html" target=""><img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt=""></a>
+                    <h3><a href="">Radison Blu Hotel</a></h3>
+                    <p><a href="">5 Star</a></p>
+                    <p><a href="">New Delhi</a></p>
+                </div> 
+                <div id="img2">
+                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt=""><br>
+                    <a href="">The Lalit New Delh</a>
+                    <p>4.5 Star</p>
+                    <p>New Delhi</p>
+                </div>
+                <div id="img3">
+                    <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt=""><br>
+                    <a href="">Taj Palace</a>
+                    <p>4.0 Star</p>
+                    <p>New Delhi</p>
+                </div>
         </div>
         <div id="map">
-            <a href="">Taj Palace</a>
-            <br>
-            <p>4.0 Star</p>
-            <p>New Delhi</p>
             <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="">
-            <br>
-            MAP VIEW
         </div>
+        MAP VIEW
     </article>
     <footer>
         <a href="contact.html" target="_blank">CONTACT US</a>
