--- a/payment.html
+++ b/payment.html
@@ -11,25 +11,25 @@
         <a href="index.html"><img src="/assests/images/logo.png" alt="logo"></a>
         <a href="login.html">Login</a>
     </header>
-    <div id="content">
+    <article>
+        <div id="content">
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
         <h2>Radison Blu Hotel</h2>
-        <div>
             <p>#38 of 1,289 hotels in New Delhi</p>
             <p>National Highway 8, New Delhi 110017 India</p>
         </div>
-        <div>
+        <div id="customer">
             <p><label style="font-weight: bold;">Name:</label> <label>John Doe</label></p>
             <p><label style="font-weight: bold;">Number of Adults:</label> <label>2</label></p>
             <p><label style="font-weight: bold;">Check-in Date:</label> <label>06.06.2020</label></p>
             <p><label style="font-weight: bold;">Check-out Date:</label> <label>08.06.2020</label></p>
         </div>
-        <div>
+        <div id="detail">
             <p><label style="font-weight: bold;">Tariff Breakdown:</label> <label>Rs 1000 * 2 Adults * 5 Nights</label></p>
             <p><label style="font-weight: bold;">Total Amount:</label> <label>Rs 10000</label></p>
         </div>
         <a href="#">Pay Now</a>
-    </div>
+    </article>
     <footer>
         <div>
             <a href="contact.html" target="_blank">Contact Us</a>
