--- a/detail.html
+++ b/detail.html
@@ -13,6 +13,7 @@
     </header>
     <article>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
+        <div id="form">
             <form action="payment.html">
                 <label for="adults">Adults:</label>
                 <input type="number" id="adults" name="adults" min="1" required>
@@ -31,19 +32,22 @@
                 <br>
                 <input type="submit" value="Book Now">
             </form>
-        <h2>Radison Blu Hotel</h2>
-        <p>RATING</p>
-        <p>5 Star</p>
-        <p>AMENITIES</p>
-        <ul>
-            <li>Room Service</li>
-            <li>Resturant</li>
-            <li>Business center</li>
-            <li>Fitness center</li>
-            <li>Pool</li>
-        </ul>
-        <h5>DESCRIPTION</h5>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
+        </div>
+        <div id="detail">    
+            <h2>Radison Blu Hotel</h2>
+            <p>RATING</p>
+            <p>5 Star</p>
+            <p>AMENITIES</p>
+            <ul>
+                <li>Room Service</li>
+                <li>Resturant</li>
+                <li>Business center</li>
+                <li>Fitness center</li>
+                <li>Pool</li>
+            </ul>
+            <h5>DESCRIPTION</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum eligendi cum esse, reiciendis quo odio. Amet quibusdam quasi mollitia obcaecati modi similique tempore ab minus commodi. Libero alias reiciendis aspernatur!</p>
+        </div>
     </article>
     <footer>
         <div>
