--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <a href="login.html" target="_blank">Login</a>
     </header>
     <article>
-        <input type="text" placeholder="City">
-        <br>
-        <a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="" height="300px" width="300px"> </a>
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="" height="300px" width="300px">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="" height="300px" width="300px">
-        <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="" height="300px" width="300px">
-        <br>
+        <div id="city">
+            <input type="text" placeholder="City">
+        </div>
+        <div id="img">
+            <a href="list.html" target="_self"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="" height="300px" width="300px"> </a>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="">
+        </div>
         <a href="#">View more >></a>
     </article>
     <footer>
