--- a/loader.html
+++ b/loader.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/loader.css">
 </head>
 <body>
-    <div>
-        LOADER
+    <div class="loader">   
     </div>
 </body>
 </html>
