--- a/payment.html
+++ b/payment.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOTEL_BOOKING_WEBSIDE_Payment</title>
     <link rel="stylesheet" href="styles/payment.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="/assests/images/logo.png" alt="logo"></a>
-        <a href="login.html">Login</a>
+        <div id="header">
+            <div id="logo">
+                <img src="/assests/images/logo.png" alt="logo" class="logo">
+            </div>
+            <div id="login">
+                <a href="login.html" target="_blank" class="login">Login</a>
+            </div>
+        </div>
     </header>
     <article>
         <div id="content">
@@ -31,15 +38,17 @@
         <a href="#">Pay Now</a>
     </article>
     <footer>
-        <div>
-            <a href="contact.html" target="_blank">Contact Us</a>
+        <div id="contact">
+            <a href="contact.html" target="_blank">CONTACT US</a>
         </div>
-        <div>
-            <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt=""></a>
-            <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt=""></a>
-            <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt=""></a>
+        <div id="media">
+            <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
+            <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
         </div>
-        &copy 2020 ROOM SEARCH PVT. LTD.
+        <div id="copy">
+            <p>&copy 2020 ROOM SEARCH PVT. LTD.</p>
+        </div>
     </footer>
 </body>
 </html>
