--- a/detail.html
+++ b/detail.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/detail.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="/assests/images/logo.png"></a>
-        <a href="login.html">Login</a>
+        <div id="header">
+            <div id="logo">
+                <img src="/assests/images/logo.png" alt="logo" class="logo">
+            </div>
+            <div id="login">
+                <a href="login.html" target="_blank" class="login">Login</a>
+            </div>
+        </div>
     </header>
     <article>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="">
@@ -50,16 +57,17 @@
         </div>
     </article>
     <footer>
-        <div>
+        <div id="contact">
             <a href="contact.html" target="_blank">CONTACT US</a>
         </div>
-
-            <div id="logo">
-                <a href="https://www.facebook.com" target="_blank"> <img src="/assests/images/facebook.png" alt=""></a>
-                <a href="https://www.instagram.com" target="_blank"> <img src="/assests/images/instagram.png" alt=""></a>
-                <a href="https://twitter.com" target="_blank"> <img src="/assests/images/twitter.png" alt=""></a>
-            </div>
-        &copy 2020 ROOM SEARCH PVT. LTD.
+        <div id="media">
+            <a href="https://www.facebook.com" target="_blank"><img src="/assests/images/facebook.png" alt="" ></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="/assests/images/instagram.png" alt=""></a>
+            <a href="https://twitter.com" target="_blank"><img src="/assests/images/twitter.png" alt=""></a>
+        </div>
+        <div id="copy">
+            <p>&copy 2020 ROOM SEARCH PVT. LTD.</p>
+        </div>
     </footer>
 </body>
 </html>
