--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
                     </a>
                 </div>
             </div>
+            <div id="view-more-city-cards">
+                <div class="city-cards">
+                    <div class="city-card-and-name-inner">
+                        <a href="list.html?city=Chennai">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/4d/46/b8/chennai-madras.jpg" class="city-image">
+                            <div class='overlay'><span>Chennai</span></div>
+                        </a>
+                    </div>
+                    <div class="city-card-and-name-inner">
+                        <a href="list.html?city=Agra">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/fc/agra.jpg" class="city-image">
+                            <div class='overlay'><span>Agra</span></div>
+                        </a>
+                    </div>
+                    <div class="city-card-and-name-inner">
+                        <a href="list.html?city=Jaipur">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/10/a3/3b/8a/screenshot-2017-09-12.jpg" class="city-image">
+                            <div class='overlay'><span>Jaipur</span></div>
+                        </a>
+                    </div>  
+                    <div class="city-card-and-name-inner">
+                        <a href="list.html?city=Bengaluru">
+                            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0c/d2/2f/7a/palace-from-the-outside.jpg" class="city-image">
+                            <div class='overlay'><span>Bengaluru</span></div>
+                        </a>
+                    </div>
+                </div>
+            </div>
             <a id="view-more">
                 <button id="view-more-button" type="button" class="btn btn-secondary">View More</button> 
             </a>  
